--- a/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarView.xib
+++ b/Depo/Depo/Presentation/SubViews/CustomTabBars/TabBarView.xib
@@ -3,8 +3,9 @@
     <device id="retina6_5" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17126"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -12,6 +13,7 @@
             <connections>
                 <outlet property="bottomTabBarConstraint" destination="Nv2-yE-i9E" id="iIg-GK-gy1"/>
                 <outlet property="contentView" destination="i0i-at-wPy" id="UmC-zb-APO"/>
+                <outlet property="curtainView" destination="JJb-a8-a7O" id="m7y-HX-0jG"/>
                 <outlet property="mainContentView" destination="FJl-Cl-AGP" id="bHk-JG-24y"/>
                 <outlet property="musicBar" destination="W0f-ko-odc" id="s5m-3f-Nav"/>
                 <outlet property="musicBarHeightConstraint" destination="oLW-8y-KOm" id="Xal-XQ-eOu"/>
@@ -33,12 +35,16 @@
                             <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         </view>
-                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W0f-ko-odc" customClass="MusicBar" customModule="Billo" customModuleProvider="target">
+                        <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="W0f-ko-odc" customClass="MusicBar" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="813" width="414" height="0.0"/>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <constraints>
                                 <constraint firstAttribute="height" id="oLW-8y-KOm"/>
                             </constraints>
+                        </view>
+                        <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="JJb-a8-a7O">
+                            <rect key="frame" x="0.0" y="0.0" width="414" height="813"/>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         </view>
                         <tabBar contentMode="scaleToFill" translucent="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pdh-iF-uTx" customClass="CustomTabBar" customModule="Billo" customModuleProvider="target">
                             <rect key="frame" x="0.0" y="813" width="414" height="49"/>
@@ -69,17 +75,21 @@
                     <color key="backgroundColor" white="1" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="trailing" secondItem="W0f-ko-odc" secondAttribute="trailing" id="2vE-tf-F6n"/>
+                        <constraint firstItem="JJb-a8-a7O" firstAttribute="top" secondItem="FJl-Cl-AGP" secondAttribute="top" id="5rp-Iw-NgF"/>
                         <constraint firstItem="W0f-ko-odc" firstAttribute="leading" secondItem="FJl-Cl-AGP" secondAttribute="leading" id="CUn-UV-qbO"/>
                         <constraint firstItem="HTg-Qb-BHM" firstAttribute="centerX" secondItem="FJl-Cl-AGP" secondAttribute="centerX" id="FKi-fA-q2I"/>
                         <constraint firstItem="i0i-at-wPy" firstAttribute="top" secondItem="FJl-Cl-AGP" secondAttribute="top" id="GsX-8P-b56"/>
+                        <constraint firstItem="JJb-a8-a7O" firstAttribute="leading" secondItem="FJl-Cl-AGP" secondAttribute="leading" id="Iwa-td-8HT"/>
                         <constraint firstItem="i0i-at-wPy" firstAttribute="leading" secondItem="FJl-Cl-AGP" secondAttribute="leading" id="KUC-Ts-NXO"/>
                         <constraint firstItem="Pdh-iF-uTx" firstAttribute="top" secondItem="W0f-ko-odc" secondAttribute="bottom" id="N1V-LQ-PIK"/>
                         <constraint firstAttribute="trailing" secondItem="i0i-at-wPy" secondAttribute="trailing" id="NOK-Ih-oLn"/>
                         <constraint firstItem="ero-vK-F2b" firstAttribute="bottom" secondItem="Pdh-iF-uTx" secondAttribute="bottom" id="Nv2-yE-i9E"/>
+                        <constraint firstAttribute="trailing" secondItem="JJb-a8-a7O" secondAttribute="trailing" id="XYr-Mr-BUR"/>
                         <constraint firstItem="ero-vK-F2b" firstAttribute="bottom" secondItem="HTg-Qb-BHM" secondAttribute="bottom" constant="10" id="fwk-B8-P1O"/>
                         <constraint firstAttribute="trailing" secondItem="Pdh-iF-uTx" secondAttribute="trailing" id="iee-hk-ssn"/>
                         <constraint firstItem="W0f-ko-odc" firstAttribute="top" secondItem="i0i-at-wPy" secondAttribute="bottom" id="rlX-hu-WYO"/>
                         <constraint firstItem="Pdh-iF-uTx" firstAttribute="leading" secondItem="FJl-Cl-AGP" secondAttribute="leading" id="uSv-rF-MBk"/>
+                        <constraint firstItem="Pdh-iF-uTx" firstAttribute="top" secondItem="JJb-a8-a7O" secondAttribute="bottom" id="x9l-7e-uAY"/>
                     </constraints>
                 </view>
             </subviews>
@@ -98,5 +108,8 @@
     </objects>
     <resources>
         <image name="CenterButton" width="64" height="64"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
