--- a/Depo/Depo/Presentation/SubViews/PrivateShareSlider/SharedFilesCollectionSliderView.xib
+++ b/Depo/Depo/Presentation/SubViews/PrivateShareSlider/SharedFilesCollectionSliderView.xib
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zKR-Lk-LO2" customClass="SharedFilesCollectionSliderView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="661" height="334"/>
+            <rect key="frame" x="0.0" y="0.0" width="661" height="164"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JIu-13-OA3">
                     <rect key="frame" x="16" y="16" width="42" height="21"/>
@@ -27,7 +27,7 @@
                     </connections>
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ZJp-wS-6c1">
-                    <rect key="frame" x="0.0" y="53" width="661" height="275"/>
+                    <rect key="frame" x="0.0" y="53" width="661" height="105"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iue-IP-DMT">
                         <size key="itemSize" width="128" height="128"/>
@@ -45,12 +45,13 @@
                 <constraint firstItem="ZJp-wS-6c1" firstAttribute="top" secondItem="JIu-13-OA3" secondAttribute="bottom" constant="16" id="CPn-kB-HM0"/>
                 <constraint firstItem="ZJp-wS-6c1" firstAttribute="leading" secondItem="zKR-Lk-LO2" secondAttribute="leading" id="Cco-hJ-fbY"/>
                 <constraint firstItem="BJ9-pW-mRq" firstAttribute="centerY" secondItem="JIu-13-OA3" secondAttribute="centerY" id="Kdt-7O-Bcg"/>
+                <constraint firstAttribute="height" constant="164" id="LTC-PP-9iB"/>
                 <constraint firstAttribute="trailing" secondItem="BJ9-pW-mRq" secondAttribute="trailing" constant="16" id="NLX-LS-nqn"/>
                 <constraint firstItem="JIu-13-OA3" firstAttribute="top" secondItem="zKR-Lk-LO2" secondAttribute="top" constant="16" id="c9L-27-QzG"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
-                <outlet property="collectionView" destination="ZJp-wS-6c1" id="s3C-NP-O5k"/>
+                <outlet property="collectionView" destination="ZJp-wS-6c1" id="Kcv-gy-yYl"/>
                 <outlet property="showAllButton" destination="BJ9-pW-mRq" id="DyN-Lc-ood"/>
                 <outlet property="sliderLabel" destination="JIu-13-OA3" id="csY-fH-aAp"/>
             </connections>
