--- a/Depo/Depo/Presentation/SubViews/PrivateShareSlider/SharedFilesCollectionSliderView.xib
+++ b/Depo/Depo/Presentation/SubViews/PrivateShareSlider/SharedFilesCollectionSliderView.xib
@@ -11,7 +11,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="zKR-Lk-LO2" customClass="SharedFilesCollectionSliderView" customModule="Billo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="661" height="184"/>
+            <rect key="frame" x="0.0" y="0.0" width="665" height="224"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JIu-13-OA3">
                     <rect key="frame" x="16" y="16" width="42" height="21"/>
@@ -20,14 +20,14 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BJ9-pW-mRq">
-                    <rect key="frame" x="599" y="11.5" width="46" height="30"/>
+                    <rect key="frame" x="603" y="11.5" width="46" height="30"/>
                     <state key="normal" title="Button"/>
                     <connections>
                         <action selector="showAll:" destination="zKR-Lk-LO2" eventType="touchUpInside" id="np1-l8-gEQ"/>
                     </connections>
                 </button>
                 <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="ZJp-wS-6c1">
-                    <rect key="frame" x="0.0" y="53" width="661" height="125"/>
+                    <rect key="frame" x="0.0" y="53" width="665" height="126"/>
                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="iue-IP-DMT">
                         <size key="itemSize" width="128" height="128"/>
@@ -36,26 +36,35 @@
                         <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                     </collectionViewFlowLayout>
                 </collectionView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xyt-Iv-qh8">
+                    <rect key="frame" x="16" y="197" width="42" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
             </subviews>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
                 <constraint firstAttribute="trailing" secondItem="ZJp-wS-6c1" secondAttribute="trailing" id="1lr-B5-IcO"/>
                 <constraint firstItem="JIu-13-OA3" firstAttribute="leading" secondItem="zKR-Lk-LO2" secondAttribute="leading" constant="16" id="4a5-Av-xDa"/>
-                <constraint firstAttribute="bottom" secondItem="ZJp-wS-6c1" secondAttribute="bottom" constant="6" id="9bD-IK-QcU"/>
                 <constraint firstItem="ZJp-wS-6c1" firstAttribute="top" secondItem="JIu-13-OA3" secondAttribute="bottom" constant="16" id="CPn-kB-HM0"/>
                 <constraint firstItem="ZJp-wS-6c1" firstAttribute="leading" secondItem="zKR-Lk-LO2" secondAttribute="leading" id="Cco-hJ-fbY"/>
                 <constraint firstItem="BJ9-pW-mRq" firstAttribute="centerY" secondItem="JIu-13-OA3" secondAttribute="centerY" id="Kdt-7O-Bcg"/>
-                <constraint firstAttribute="height" constant="184" id="LTC-PP-9iB"/>
+                <constraint firstAttribute="height" constant="224" id="LTC-PP-9iB"/>
                 <constraint firstAttribute="trailing" secondItem="BJ9-pW-mRq" secondAttribute="trailing" constant="16" id="NLX-LS-nqn"/>
+                <constraint firstAttribute="bottom" secondItem="xyt-Iv-qh8" secondAttribute="bottom" constant="6" id="Ph5-EC-12V"/>
+                <constraint firstItem="xyt-Iv-qh8" firstAttribute="top" secondItem="ZJp-wS-6c1" secondAttribute="bottom" constant="18" id="an4-M8-E4a"/>
                 <constraint firstItem="JIu-13-OA3" firstAttribute="top" secondItem="zKR-Lk-LO2" secondAttribute="top" constant="16" id="c9L-27-QzG"/>
+                <constraint firstItem="xyt-Iv-qh8" firstAttribute="leading" secondItem="JIu-13-OA3" secondAttribute="leading" id="ehx-6S-23M"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
             <connections>
                 <outlet property="collectionView" destination="ZJp-wS-6c1" id="Kcv-gy-yYl"/>
+                <outlet property="myFilesLabel" destination="xyt-Iv-qh8" id="ohL-9v-rfU"/>
                 <outlet property="showAllButton" destination="BJ9-pW-mRq" id="DyN-Lc-ood"/>
                 <outlet property="sliderLabel" destination="JIu-13-OA3" id="csY-fH-aAp"/>
             </connections>
-            <point key="canvasLocation" x="129.71014492753625" y="473.4375"/>
+            <point key="canvasLocation" x="132.60869565217394" y="487.5"/>
         </view>
     </objects>
     <resources>
