--- a/Depo/Depo/Presentation/SubViews/PrivateShareSlider/SharedFilesSliderCell.xib
+++ b/Depo/Depo/Presentation/SubViews/PrivateShareSlider/SharedFilesSliderCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17156" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17125"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -31,6 +31,9 @@
                             <constraint firstAttribute="height" constant="35" id="WJC-sY-THm"/>
                         </constraints>
                     </imageView>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PPS-Ib-te2">
+                        <rect key="frame" x="0.0" y="0.0" width="96" height="90"/>
+                    </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t5K-pN-SGX">
                         <rect key="frame" x="0.0" y="96" width="96" height="11"/>
                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -48,6 +51,10 @@
                     <constraint firstItem="teT-8p-g1Y" firstAttribute="top" secondItem="IcS-AA-XZY" secondAttribute="top" id="iMN-fl-Kyu"/>
                     <constraint firstItem="t5K-pN-SGX" firstAttribute="top" secondItem="teT-8p-g1Y" secondAttribute="bottom" constant="6" id="lpG-7r-dxv"/>
                     <constraint firstItem="dBz-ix-zBE" firstAttribute="centerY" secondItem="teT-8p-g1Y" secondAttribute="centerY" id="mRG-AV-31K"/>
+                    <constraint firstItem="PPS-Ib-te2" firstAttribute="bottom" secondItem="teT-8p-g1Y" secondAttribute="bottom" id="pIK-wR-Xee"/>
+                    <constraint firstItem="PPS-Ib-te2" firstAttribute="leading" secondItem="teT-8p-g1Y" secondAttribute="leading" id="sYg-DE-nye"/>
+                    <constraint firstItem="PPS-Ib-te2" firstAttribute="trailing" secondItem="teT-8p-g1Y" secondAttribute="trailing" id="vlk-Uq-gNY"/>
+                    <constraint firstItem="PPS-Ib-te2" firstAttribute="top" secondItem="teT-8p-g1Y" secondAttribute="top" id="wv8-C6-rNg"/>
                 </constraints>
             </collectionViewCellContentView>
             <viewLayoutGuide key="safeArea" id="r1Q-Sk-SFz"/>
@@ -56,6 +63,7 @@
                 <outlet property="fileBGImage" destination="teT-8p-g1Y" id="vda-H8-ey6"/>
                 <outlet property="fileImage" destination="dBz-ix-zBE" id="aMt-ZV-dxg"/>
                 <outlet property="fileLabel" destination="t5K-pN-SGX" id="DSr-1A-aIx"/>
+                <outlet property="thumbnailImageView" destination="PPS-Ib-te2" id="F7O-xy-512"/>
             </connections>
             <point key="canvasLocation" x="-505.79710144927537" y="205.91517857142856"/>
         </collectionViewCell>
