--- a/Depo/Depo/Presentation/CollectionViewCells/BasicCollectionMultiFileCell.xib
+++ b/Depo/Depo/Presentation/CollectionViewCells/BasicCollectionMultiFileCell.xib
@@ -1,17 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
-    <device id="retina4_7" orientation="portrait">
-        <adaptation id="fullscreen"/>
-    </device>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+    <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BasicCollectionMultiFileCell" id="jCE-Fv-hOx" customClass="BasicCollectionMultiFileCell" customModule="lifebox" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="BasicCollectionMultiFileCell" id="jCE-Fv-hOx" customClass="BasicCollectionMultiFileCell" customModule="Billo" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="200" height="200"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -32,7 +30,7 @@
                                         <rect key="frame" x="0.0" y="0.0" width="194" height="155"/>
                                     </imageView>
                                     <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="3c5-un-BNe">
-                                        <rect key="frame" x="87" y="67" width="20" height="20"/>
+                                        <rect key="frame" x="87" y="67.5" width="20" height="20"/>
                                     </activityIndicatorView>
                                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="U7U-HC-bQs">
                                         <rect key="frame" x="162" y="12" width="22" height="22"/>
@@ -58,33 +56,33 @@
                                 <rect key="frame" x="3" y="158" width="194" height="39"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mmN-Ss-WiL">
-                                        <rect key="frame" x="0.0" y="0.0" width="155" height="39"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="131" height="39"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ccW-PV-wRg">
-                                                <rect key="frame" x="14" y="7" width="20" height="24"/>
+                                                <rect key="frame" x="14" y="7.5" width="20" height="24"/>
                                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             </view>
-                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YvY-3L-GEe" customClass="SelectionImageView" customModule="lifebox" customModuleProvider="target">
-                                                <rect key="frame" x="14" y="7" width="20" height="24"/>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="YvY-3L-GEe" customClass="SelectionImageView" customModule="Billo" customModuleProvider="target">
+                                                <rect key="frame" x="14" y="7.5" width="20" height="24"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="24" id="Bjt-em-dGN"/>
                                                     <constraint firstAttribute="width" constant="20" id="wMj-5N-Cny"/>
                                                 </constraints>
                                             </imageView>
                                             <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="selectedList" translatesAutoresizingMaskIntoConstraints="NO" id="7ip-a8-Iax">
-                                                <rect key="frame" x="14" y="7" width="20" height="24"/>
+                                                <rect key="frame" x="14" y="7.5" width="20" height="24"/>
                                             </imageView>
                                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="3KG-34-RcK">
-                                                <rect key="frame" x="39" y="-1" width="100" height="41"/>
+                                                <rect key="frame" x="39" y="-1" width="76" height="41"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nvT-sm-YJt">
-                                                        <rect key="frame" x="0.0" y="0.0" width="100" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="0.0" width="76" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8q9-nH-HW1">
-                                                        <rect key="frame" x="0.0" y="20.5" width="100" height="20.5"/>
+                                                        <rect key="frame" x="0.0" y="20.5" width="76" height="20.5"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
@@ -92,7 +90,7 @@
                                                 </subviews>
                                             </stackView>
                                             <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yJW-XA-t4C">
-                                                <rect key="frame" x="39" y="4" width="100" height="31"/>
+                                                <rect key="frame" x="39" y="4" width="76" height="31"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="31" id="xdi-2f-3fy"/>
                                                 </constraints>
@@ -101,7 +99,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="favoriteStar" translatesAutoresizingMaskIntoConstraints="NO" id="QTj-Mm-Ths">
-                                                <rect key="frame" x="142" y="14" width="13" height="12"/>
+                                                <rect key="frame" x="118" y="13.5" width="13" height="12"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="12" id="elM-nh-Pl9"/>
                                                     <constraint firstAttribute="width" constant="13" id="ubH-TL-r1X"/>
@@ -131,23 +129,37 @@
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nsI-KK-JUi">
-                                        <rect key="frame" x="155" y="0.0" width="39" height="39"/>
+                                        <rect key="frame" x="131" y="0.0" width="63" height="39"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cDg-eD-Ha4">
-                                                <rect key="frame" x="0.0" y="0.0" width="39" height="39"/>
-                                                <state key="normal" image="more-1"/>
-                                                <connections>
-                                                    <action selector="moreButtonAction:" destination="jCE-Fv-hOx" eventType="touchUpInside" id="r0q-rQ-Tpc"/>
-                                                </connections>
-                                            </button>
+                                            <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Yow-FS-rI7">
+                                                <rect key="frame" x="0.0" y="0.0" width="63" height="39"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="privateSharePeople" translatesAutoresizingMaskIntoConstraints="NO" id="2HG-lz-Pps">
+                                                        <rect key="frame" x="0.0" y="0.0" width="24" height="39"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="24" id="OZD-aO-OW7"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="cDg-eD-Ha4">
+                                                        <rect key="frame" x="24" y="0.0" width="39" height="39"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="39" id="Q46-D5-XhR"/>
+                                                            <constraint firstAttribute="height" constant="39" id="m8N-oZ-fVC"/>
+                                                        </constraints>
+                                                        <state key="normal" image="more-1"/>
+                                                        <connections>
+                                                            <action selector="moreButtonAction:" destination="jCE-Fv-hOx" eventType="touchUpInside" id="r0q-rQ-Tpc"/>
+                                                        </connections>
+                                                    </button>
+                                                </subviews>
+                                            </stackView>
                                         </subviews>
                                         <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <constraints>
-                                            <constraint firstAttribute="bottom" secondItem="cDg-eD-Ha4" secondAttribute="bottom" id="76Z-W4-ynv"/>
-                                            <constraint firstAttribute="trailing" secondItem="cDg-eD-Ha4" secondAttribute="trailing" id="K2w-lD-9Bf"/>
-                                            <constraint firstAttribute="width" constant="39" id="SOe-AF-lPf"/>
-                                            <constraint firstItem="cDg-eD-Ha4" firstAttribute="leading" secondItem="nsI-KK-JUi" secondAttribute="leading" id="Zyq-4X-z5C"/>
-                                            <constraint firstItem="cDg-eD-Ha4" firstAttribute="top" secondItem="nsI-KK-JUi" secondAttribute="top" id="wNP-w2-DCw"/>
+                                            <constraint firstAttribute="bottom" secondItem="Yow-FS-rI7" secondAttribute="bottom" id="AW2-06-i8E"/>
+                                            <constraint firstAttribute="trailing" secondItem="Yow-FS-rI7" secondAttribute="trailing" id="JLv-Jo-chi"/>
+                                            <constraint firstItem="Yow-FS-rI7" firstAttribute="top" secondItem="nsI-KK-JUi" secondAttribute="top" id="VLN-xC-lRZ"/>
+                                            <constraint firstItem="Yow-FS-rI7" firstAttribute="leading" secondItem="nsI-KK-JUi" secondAttribute="leading" id="jD2-pQ-jNz"/>
                                         </constraints>
                                     </view>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Ih3-tg-57V">
@@ -223,6 +235,7 @@
                 <outlet property="moreButton" destination="cDg-eD-Ha4" id="aRR-oO-iGZ"/>
                 <outlet property="selectionImageView" destination="U7U-HC-bQs" id="z76-49-VVy"/>
                 <outlet property="separatorView" destination="Ih3-tg-57V" id="82s-th-WEJ"/>
+                <outlet property="sharedIcon" destination="2HG-lz-Pps" id="NxQ-JT-Ipr"/>
                 <outlet property="smallCellSelectionView" destination="7ip-a8-Iax" id="xh7-bn-3Jo"/>
                 <outlet property="smallContentImageView" destination="YvY-3L-GEe" id="hOx-cB-Vjf"/>
                 <outlet property="smallContentImageViewH" destination="Bjt-em-dGN" id="k0y-Tp-q6G"/>
@@ -236,6 +249,7 @@
     <resources>
         <image name="favoriteStar" width="13" height="12"/>
         <image name="more-1" width="6" height="24"/>
+        <image name="privateSharePeople" width="16" height="13"/>
         <image name="selectedList" width="36" height="36"/>
     </resources>
 </document>
